--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,15 @@
-theme: jekyll-theme-cayman
+# Site settings
+title:        "block-Log"
+description:  "student"
+baseurl:      "" # the subpath of your site, e.g. /blog/
+url:          "http://livypad.github.io" # the base hostname & protocol for your site
+permalink:    /:year/:title
+github:       "livypad"
+# twitter:      "yourusername"
+email:        "ishonghua.zhu@outlook.com"
+disqus-id:    "" #leave blank if you dont want comments.
+
+# Build settings
+markdown:     kramdown
+sass:
+    style: :compressed
