--- a/note/.obsidian/workspace
+++ b/note/.obsidian/workspace
@@ -10,8 +10,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "cs.md",
-            "mode": "source"
+            "file": "latex.md",
+            "mode": "preview"
           }
         }
       }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "cs.md",
+                "file": "latex.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -95,10 +95,10 @@
     "width": 300
   },
   "lastOpenFiles": [
-    "cs.md",
-    "dsa.md",
-    "OpenGL.md",
     "latex.md",
+    "OpenGL.md",
+    "dsa.md",
+    "cs.md",
     "electric.md",
     "2020-06-30-ao31.md",
     "主界面.md",
