--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -3,12 +3,11 @@ name: github pages
 on:
     push:
         branches:
-            - main # Set a branch to deploy
-    pull_request:
+            - master # 每次推送到 main 分支都会触发部署任务
 
 jobs:
     deploy:
-        runs-on: ubuntu-20.04
+        runs-on: ubuntu-18.04
         steps:
             - uses: actions/checkout@v2
               with:
@@ -18,15 +17,16 @@ jobs:
             - name: Setup Hugo
               uses: peaceiris/actions-hugo@v2
               with:
-                  hugo-version: "latest"
-                  # extended: true
+                  hugo-version: "0.79.1"
+                  extended: true
 
             - name: Build
               run: hugo --minify
 
             - name: Deploy
               uses: peaceiris/actions-gh-pages@v3
-              if: github.ref == 'refs/heads/main'
               with:
-                  github_token: ${{ secrets.GITHUB_TOKEN }}
+                  deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+                  external_repository: <USERNAME>/<USERNAME>.github.io # 替换成上文所创建的个人主页仓库
+                  publish_branch: main
                   publish_dir: ./public
