代码高亮样式修复

--- a/config.toml
+++ b/config.toml
@@ -55,3 +55,8 @@ disableComments = true
     id = "email"
     name="ishonghua.zhu@outlook.com"
 
+[markup]
+    [markup.highlight]
+        style = "manni"
+
+
